// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubmitButton Compact: true should match the previous snapshot with compact true 1`] = `
<button
  className="btn btn-primary btn-block"
  disabled={false}
  type="submit"
>
  Send
</button>
`;

exports[`SubmitButton EditMode: false should match the previous snapshot with editMode false 1`] = `
<button
  className="btn btn-primary btn-block"
  disabled={false}
  type="submit"
>
  Send request
</button>
`;

exports[`SubmitButton EditMode: true should match the previous snapshot with editMode true 1`] = `
<button
  className="btn btn-success btn-block"
  disabled={false}
  type="submit"
>
  Update request
</button>
`;
